# keratin

./: .gitignore  Cargo.toml  DESIGN_NOTES(WIP).md  SAMPLE_ROADMAP.md
keratin-log/: Cargo.toml
keratin-log/src/: batcher.rs  config.rs  durability.rs  index.rs  keratin.rs  lib.rs  log.rs  manifest.rs  reader.rs  record.rs  recovery.rs  segment.rs  util.rs  writer.rs
keratin-log/tests/: identity.rs  recovery.rs  wal_identity.rs  wal_index.rs  wal_recovery.rs
stroma/core/: Cargo.toml
stroma/core/src/: event.rs  lib.rs  sequencer.rs  state.rs  store.rs  stroma.rs
stroma/core/tests/: ack.rs  crash.rs  fuzz.rs  inflight.rs  replay.rs
